# SuoXing-Tuan

./: .gitignore  CLAUDE.md  README.md
OTHER_END/Astra_Pro_LocalNetConnect_Windows/: .gitignore  README.txt  astra_vehicle_server.py  requirements.txt
OTHER_END/Car_detection_end/: .gitignore  CMakeLists.txt  README.md  build.sh  car-camera.service  config.json  start.sh
OTHER_END/Car_detection_end/lidar_bridge/: CMakeLists.txt  lidar_stdout.cpp
OTHER_END/Car_detection_end/src/: camera.cpp  camera.h  lidar.cpp  lidar.h  main.cpp  packet.cpp  packet.h  sender.cpp  sender.h  watchdog.cpp  watchdog.h
OTHER_END/Control_Server/: API.md  CMakeLists.txt  README.md  handlers.cpp  handlers.h  log.h  main.cpp  ring_store.h  room.cpp  room.h
OTHER_END/Transpond_Server/: .gitignore  API.md  CMakeLists.txt  DESIGN.md  README.md  handlers.cpp  handlers.h  main.cpp  store.h  测试.py
OTHER_END/local_direct_camera/: README.md  astra_vehicle_server.py  requirements.txt  viewer.html
OTHER_END/mobile/: .gitignore  README.md
OTHER_END/mobile/tuan-app/: package.json  tsconfig.json
backend/: README-PEOPLE.md  config.example.yaml  config.yaml  config_loader.py  inference.py  main.py  pyproject.toml  requirements.txt
backend/common/: __init__.py  camera.py  projection.py  schemas.py  transform.py
backend/data_pre_processing/: __init__.py  data_fusion_manager.py  kinematics_api.py  main_example.py  state_estimator.py
backend/debug/: routes.py
backend/fusion/: __init__.py  coloring.py  datafusion.py  manager.py  render.py
backend/inference/: __init__.py  engine.py  schemas.py
backend/loader/: __init__.py  scene_loader.py
backend/pipeline/: fusion.py
backend/realtime/: __init__.py  fusion_router.py  preprocessor.py
backend/reconstruction/: __init__.py  coloring.py  defect_table.py  engine.py  fusion.py  projector.py  routes.py  schemas.py  state_estimator.py  transform.py
backend/server/: __init__.py  main.py
backend/server/api/: __init__.py
backend/server/config/: __init__.py
backend/server/detection/: __init__.py  detector.py  postprocess.py
backend/server/engine/: __init__.py  engine.py  frame_buffer.py
backend/server/estimation/: __init__.py  base.py  bicycle.py  bicycle_estimator.py  constant.py  constant_estimator.py  estimator.py  facade.py  fusion.py  fusion_estimator.py  manager.py  rgbd_estimator.py  rgbd_odometry.py
backend/server/pointcloud/: __init__.py  (+1 more)
backend/state_estimation/: __init__.py  estimator.py  router.py
backend/tests/: __init__.py  test_api.py  test_engine.py  test_estimator.py  test_pipeline.py
docs/: API接口清单.md  ARCHITECTURE.md  BACKEND_DESIGN.md  FRONTEND_DESIGN.md  Open3D_TSDF_接入方案.md  PROJECT_STRUCTURE.md  README-PEOPLE.md  README.md  YOLO管线改造方案.md  中转服务器设计.md  主动模式数据流报告.md  位置估计器设计.md  修复验证报告.md  前端双网络模式设计.md  参考文献.md  可能存在的错误和改进建议.md  后端架构.md  后端管线图.md  多类别缺陷检测升级方案.md  实时融合页面API文档.md  实时融合页面设计方案.md  局域网连接协议.md  待办.md  控制端架构.md  数据保存与回放格式.md  项目文件夹结构.md
docs-people/: README.md  git-代理指令.people  new_detection_data.md  start.promote  位置估计器重构变更记录.md  检查所有代码.promote
docs-people/data-package/: 深度相机帧数据包.md  遥测数据包.md
docs-people/promote/: Window模拟端.promote  global_design.promote.md  step.promote.md  位置估计器重构.promote
docs-people/promote备份/: TranspondServer.design.promote  start.promote.opt  检查所有代码.promote  配置重构.promote
docs-people/数据包格式/: detection_data.md  final_data.md  lacation_data.md  new_detection_data.md
docs/API参考/: 实时融合API.md
docs/MODEL_DESIGN/: 方案1-AnyModality-DETR.md
docs/功能模块/: 三维重建管线.md
docs/待办/: 可能存在的错误和改进建议.md
docs/架构设计/: 后端设计.md  系统架构.md
frontend/: README-PEOPLE.md  config.example.json  config.yaml  electron-builder.json5  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/electron/: main.ts  preload.ts
frontend/public/: config.example.yaml
frontend/src/: App.vue  main.ts
lidar_camera_fusion/: README.md  config.yaml  lidar_camera_fusion.py  main.py  requirements.txt  test_lidar_camera_fusion.py
model-training/: README-PEOPLE.md
model-training/yolo-seg/: README.md  dataset.py  evaluate.py  predict.py  requirements.txt  train.py
model-training/yolo-training/: README-PEOPLE.md  __init__.py  dataset.py  evaluate.py  predict.py  requirements.txt  train.ipynb
script/: start_backend.py  start_frontend.py  start_simulator.py  stop_backend.py  stop_frontend.py  stop_simulator.py
scripts/: start.bat
test_end/: generate_test_data.py  send_test_data.py  simulator.py
(+139 files in other folders)
